Purview Share Version 2023-02-15-preview: Remove model objects (#33878)
* Removed models from public Maven artifact.

* Adding models to tests

* Added the correct export option

* Fixing test setup

* Updating test setup in pom.xml

* Fixing type in pom.xml file

* Adding export in pom.xml file

* Adding reads in pom.xml file

* Changing module name in pom.xml file

* Adding azure core to opens in pom.xml

* Fixed comment

---------

Co-authored-by: kbowersox <kbowersox@microsoft.com>